tests/reference/asr-kwargs_03_error-a68cc46.stderr
semantic error: Variable 'arg1' not declared
 --> tests/errors/kwargs_03_error.py:9:5
  |
9 |     arg1 = 1
  |     ^^^^ 
